# docs/swagger.json
@@ -76,7 +76,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/router_manager.CustomerInput"
+                            "$ref": "#/definitions/params.CustomerInput"
                         }
                     }
                 ],
@@ -84,7 +84,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/router_manager.CustomerResponse"
+                            "$ref": "#/definitions/response_structs.CustomerResponse"
                         }
                     }
                 }
@@ -92,7 +92,7 @@
         }
     },
     "definitions": {
-        "router_manager.CustomerInput": {
+        "params.CustomerInput": {
             "type": "object",
             "required": [
                 "name"
@@ -103,7 +103,7 @@
                 }
             }
         },
-        "router_manager.CustomerResponse": {
+        "response_structs.CustomerResponse": {
             "type": "object",
             "properties": {
                 "id": {
