# response_structs/response_structs.go
@@ -1,0 +1,7 @@
+package response_structs
+
+type CustomerResponse struct {
+	ID   int    `json:"id"`
+	Name string `json:"name"`
+	// Add other response fields as needed
+}
